[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://sounds/wrong.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/correct.wav" type="AudioStream" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_right = 240.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
margin_right = 480.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="VSplitContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Quick Maths!"
__meta__ = {
"_editor_description_": "Quick MAths!"
}

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 480.0
margin_bottom = 38.0

[node name="FirstNum" type="TextEdit" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 20 )
text = "000000"
readonly = true

[node name="Operation" type="Label" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_top = 3.0
margin_right = 82.0
margin_bottom = 17.0
text = "+"

[node name="SecondNum" type="TextEdit" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 156.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 0 )
text = "00000"
readonly = true

[node name="Equals" type="Label" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_top = 3.0
margin_right = 168.0
margin_bottom = 17.0
text = "="

[node name="Response" type="TextEdit" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 312.0
margin_bottom = 20.0
rect_min_size = Vector2( 140, 0 )
text = "00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCheck" type="Button" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 316.0
margin_right = 366.0
margin_bottom = 20.0
text = "Check"

[node name="ButtonShow" type="Button" parent="VSplitContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 480.0
margin_bottom = 62.0
text = "Show Answer"

[node name="ButtonNext" type="Button" parent="VSplitContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 480.0
margin_bottom = 86.0
text = "Next"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VSplitContainer"]
margin_top = 98.0
margin_right = 480.0
margin_bottom = 800.0

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="VSplitContainer/VBoxContainer/HBoxContainer/ButtonCheck" to="." method="_on_ButtonCheck_pressed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/ButtonShow" to="." method="_on_ButtonShow_pressed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/ButtonNext" to="." method="_on_ButtonNext_pressed"]
